--- a/doquochuy.html
+++ b/doquochuy.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <h1>doquochuy.cc</h1>
-    <h2>sữa lần 1</h2>
-    <h2>sữa lần qweasd</h2>
+    <h1>đỗ quốc huy</h1>
   </body>
 </html>
